--- a/src/components/NewsArticle/NewsArticle.css
+++ b/src/components/NewsArticle/NewsArticle.css
@@ -10,14 +10,14 @@ img {
 
 .news-article {
     background-color: white;
-    border: 2px solid black;
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
-    height: 50vh;
+    height: 55vh;
     justify-content: space-between;
     margin: 10px;
     text-align: center;
-    width: 40%;
+    width: 45%;
 }
 
 .article-link {
