--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -9,14 +9,18 @@
 }
 
 header {
+  align-items: center;
   display: flex;
-  height: 10vh;
+  flex-direction: row;
+  height: 15vh;
   width: 100%;
 }
 
 h1 {
   color: #DABECA;
   font-size: 2.5em;
+  padding: 10px;
+  width: 17%;
 }
 
 .title-change {
