--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,7 +1,21 @@
-.search-field {
-    height: 6vh;
+form {
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
     width: 100%;
+}
+
+.search__field {
+    height: 6vh;
+    width: 40%;
     font-size: 1.3em;
     border-radius: 5px;
     padding: 10px;
+}
+
+.search__button {
+    height: 7vh;
+    font-size: 1em;
+    border-radius: 15px;
+    padding: 5px;
 }
